--- a/app/src/main/res/drawable/round_button.xml
+++ b/app/src/main/res/drawable/round_button.xml
@@ -3,11 +3,11 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     tools:ignore="ExtraText">
 
-    <solid android:color="@color/gray_dark" /> <!--배경색-->
-    <size android:height="50dp"
+    <solid android:color="@color/green" /> <!--배경색-->
+    <size android:height="30dp"
           android:width="100dp"/>
     <corners android:radius="100dp"/>
     <stroke
-        android:width="1dp"
-        android:color="#000000"/> <!--테두리 색-->
+        android:width="0.3dp"
+        android:color="@color/gray"/> <!--테두리 색-->
 </shape>
