--- a/app/src/main/res/layout/itembox.xml
+++ b/app/src/main/res/layout/itembox.xml
@@ -1,180 +1,116 @@
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/box_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:padding="8dp"
     android:layout_margin="10dp"
-    android:background="@drawable/box"
-    android:orientation="vertical"
-    android:elevation="10dp">
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@drawable/title_box"
-        android:layout_margin="10dp"
-        android:gravity="center"
-        android:orientation="horizontal">
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/title_layout"
-            android:layout_width="330dp"
-            android:layout_height="wrap_content"
-            android:background="#F5F5F5">
-
-            <TextView
-                android:id="@+id/stockName"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:layout_constraintStart_toStartOf="@+id/title_layout"
-                app:layout_constraintTop_toTopOf="@+id/title_layout"
-                android:layout_margin="5sp"
-                android:text="종목명"
-                android:textColor="#34A22C"
-                android:textSize="20sp"
-                android:ellipsize="end"
-                android:maxLines="1" />
-
-            <TextView
-                android:id="@+id/stockTitle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:layout_constraintStart_toStartOf="@+id/title_layout"
-                app:layout_constraintTop_toBottomOf="@+id/stockName"
-                android:layout_marginLeft="10sp"
-                android:layout_marginRight="10sp"
-                android:gravity="center"
-                android:text="제목"
-                android:textColor="@color/black"
-                android:textSize="20sp"
-                android:maxLines="1"
-                android:ellipsize = "marquee"
-                android:marqueeRepeatLimit = "marquee_forever"
-                android:singleLine="true"
-                android:focusable="true"
-                android:focusableInTouchMode="true"
-                android:scrollHorizontally="true" />
-
-            <TextView
-                android:id="@+id/bank"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10sp"
-                android:layout_marginRight="10sp"
-                app:layout_constraintBottom_toBottomOf="@+id/stockName"
-                app:layout_constraintStart_toEndOf="@+id/stockName"
-                android:gravity="center"
-                android:text="증권사"
-                android:textSize="15sp" />
-
-
-            <ImageButton
-                android:id="@+id/star_button"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:src="@drawable/star"
-                app:layout_constraintEnd_toEndOf="@+id/date"
-                android:background="?attr/selectableItemBackground" />
-
-
-            <TextView
-                android:id="@+id/date"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5sp"
-                android:layout_marginBottom="10sp"
-                app:layout_constraintBottom_toBottomOf="@id/title_layout"
-                app:layout_constraintEnd_toEndOf="@id/title_layout"
-                app:layout_constraintTop_toBottomOf="@id/stockTitle"
-                android:text="YYYY/MM/DD"
-                android:textSize="15sp"/>
-
-            <TextView
-                android:id="@+id/views"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:layout_constraintStart_toStartOf="@+id/stockTitle"
-                app:layout_constraintBottom_toBottomOf="@+id/date"
-                android:text="조회수"
-                android:textSize="13sp"/>
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-    </LinearLayout>
+    android:background="@drawable/graybox"
+    android:elevation="15dp">
 
     <TextView
-        android:id="@+id/script"
-        android:layout_width="340dp"
-        android:layout_height="150dp"
-        android:layout_margin="10dp"
-        android:background="#ffffff"
-        android:elevation="20dp"
-        android:gravity="center"
-        android:text="script" />
-
-    <LinearLayout
+        android:id="@+id/box_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginBottom="10dp"
-        android:orientation="horizontal">
+        android:layout_margin="15dp"
+        android:text="종목명"
+        android:textColor="#005011"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="@+id/box_layout"
+        app:layout_constraintTop_toTopOf="@id/box_layout" />
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:orientation="vertical">
+    <TextView
+        android:id="@+id/box_bank"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="15dp"
+        android:text="은행"
+        android:textSize="15sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/box_title"
+        app:layout_constraintStart_toEndOf="@id/box_name" />
 
-            <View
-                android:layout_width="wrap_content"
-                android:layout_height="10dp"
-                android:gravity="center"/>
+    <TextView
+        android:id="@+id/box_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="리포트 제목"
+        android:textSize="28sp"
+        android:textStyle="bold"
+        android:textColor="@color/black"
+        app:layout_constraintTop_toBottomOf="@id/box_name"
+        app:layout_constraintStart_toStartOf="@id/box_name"/>
 
-            <Button
-                android:id="@+id/ori_button"
-                android:layout_width="140dp"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ori_button"
-                android:elevation="30dp"
-                android:gravity="center"
-                android:textSize="20sp"
-                android:background="@drawable/ori_button"/>
+    <TextView
+        android:id="@+id/box_date"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="YYYY/MM/DD"
+        android:textSize="8sp"
+        android:textColor="@color/black"
+        app:layout_constraintEnd_toEndOf="@id/box_layout"
+        app:layout_constraintBottom_toBottomOf="@id/box_title"/>
 
-            <View
-                android:layout_width="wrap_content"
-                android:layout_height="30dp"
-                android:gravity="center"/>
-        </LinearLayout>
+    <!--아이콘 배경 색상 변경 필요 (setBackgroundColor)-->
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/star"
+        app:layout_constraintEnd_toEndOf="@id/box_layout"
+        app:layout_constraintTop_toTopOf="@id/box_layout"/>
 
-        <LinearLayout
-            android:layout_marginLeft="-30dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:orientation="vertical">
+    <View
+        android:id="@+id/box_guide_line"
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:background="@color/black"
+        app:layout_constraintTop_toBottomOf="@id/box_title"
+        app:layout_constraintStart_toStartOf="@id/box_layout"
+        app:layout_constraintEnd_toEndOf="@id/box_layout"
+        android:layout_margin="10dp"/>
 
-            <View
-                android:layout_width="wrap_content"
-                android:layout_height="10dp"
-                android:gravity="center"/>
+    <TextView
+        android:id="@+id/box_script"
+        android:layout_width="match_parent"
+        android:layout_height="180dp"
+        android:text="로딩중 . . ."
+        android:textSize="15sp"
+        android:textColor="@color/black"
+        android:textStyle="normal"
+        android:gravity="center"
+        app:layout_constraintTop_toBottomOf="@id/box_guide_line"
+        app:layout_constraintStart_toStartOf="@id/box_guide_line"
+        android:layout_margin="10dp"
+        android:background="@color/gray_dark"/>
 
-            <Button
-                android:id="@+id/sum_button"
-                android:layout_width="150dp"
-                android:layout_height="wrap_content"
-                android:src="@drawable/sum_button"
-                android:elevation="30dp"
-                android:gravity="center"
-                android:textSize="20sp"
-                android:background="@drawable/sum_button"/>
+    <Button
+        android:id="@+id/box_ori_button"
+        android:layout_width="120dp"
+        android:layout_height="45dp"
+        android:background="@drawable/round_button"
+        android:text="원문보기"
+        android:textSize="15sp"
+        android:textStyle="bold"
+        android:textColor="@color/black"
+        app:layout_constraintStart_toStartOf="@id/box_script"
+        app:layout_constraintTop_toBottomOf="@id/box_script"
+        app:layout_constraintEnd_toStartOf="@id/box_sum_button"
+        android:layout_margin="15dp" />
 
-        </LinearLayout>
-    </LinearLayout>
+    <Button
+        android:id="@+id/box_sum_button"
+        android:layout_width="120dp"
+        android:layout_height="45dp"
+        android:background="@drawable/round_button"
+        android:text="요약문보기"
+        android:textSize="15sp"
+        android:textStyle="bold"
+        android:textColor="@color/black"
+        app:layout_constraintStart_toEndOf="@id/box_ori_button"
+        app:layout_constraintTop_toBottomOf="@id/box_script"
+        app:layout_constraintEnd_toEndOf="@id/box_script"
+        android:layout_margin="15dp"/>
 
 
-
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
