--- a/app/src/main/res/layout/original.xml
+++ b/app/src/main/res/layout/original.xml
@@ -1,166 +1,135 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="#F4F4F4">
+    android:orientation="vertical">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/content_container"
+        android:id="@+id/ori_container"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:background="#74FF92"
+        android:layout_height="match_parent"
+        android:background="@drawable/background_round"
         android:padding="16dp"
         android:layout_alignParentTop="true">
 
-        <Button
-            android:id="@+id/backbutton_ori"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            app:layout_constraintStart_toStartOf="@+id/content_container"
-            app:layout_constraintTop_toTopOf="@+id/content_container"
-            android:layout_marginStart="8dp"
-            android:background="@drawable/back_button" />
-
-        <TextView
-            android:id="@+id/oriName"
-            android:layout_width="0dp"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/ori_title_container"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            app:layout_constraintStart_toEndOf="@id/backbutton_ori"
-            app:layout_constraintTop_toTopOf="@id/content_container"
-            android:text="종목명"
-            android:textSize="15sp"
-            android:textStyle="bold"
-            android:textColor="#34A22C"
-            android:ellipsize="end"
-            android:maxLines="1" />
+            app:layout_constraintTop_toTopOf="@id/ori_container"
+            app:layout_constraintStart_toStartOf="@id/ori_container"
+            app:layout_constraintEnd_toEndOf="@id/ori_container">
 
-        <TextView
-            android:id="@+id/ori_date"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintEnd_toEndOf="@id/content_container"
-            app:layout_constraintBottom_toBottomOf="@+id/content_container"
-            android:text="YYYY/MM/DD"
-            android:textSize="10sp" />
+            <ImageButton
+                android:id="@+id/backbutton_ori"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/back_button"
+                app:layout_constraintTop_toTopOf="@id/ori_title_container"
+                app:layout_constraintStart_toStartOf="@id/ori_title_container"
+                android:layout_margin="10dp"/>
 
-        <TextView
-            android:id="@+id/oriTitle"
-            android:layout_width="300dp"
+            <TextView
+                android:id="@+id/oriName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="종목명"
+                android:textStyle="bold"
+                android:textSize="20sp"
+                android:shadowRadius="1"
+                android:shadowDx="3"
+                android:shadowDy="3"
+                android:shadowColor="@color/gray_dark"
+                app:layout_constraintTop_toBottomOf="@id/backbutton_ori"
+                app:layout_constraintStart_toStartOf="@id/ori_title_container"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"/>
+
+            <TextView
+                android:id="@+id/oriTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="리포트 제목"
+                android:textSize="25sp"
+                android:textStyle="bold"
+                android:textColor="@color/black"
+                app:layout_constraintTop_toBottomOf="@id/oriName"
+                app:layout_constraintStart_toStartOf="@id/oriName"/>
+
+            <TextView
+                android:id="@+id/ori_date"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="YYYY/MM/DD"
+                android:textSize="13sp"
+                android:textStyle="normal"
+                android:textColor="#00027B"
+                app:layout_constraintEnd_toEndOf="@id/ori_title_container"
+                app:layout_constraintTop_toBottomOf="@id/oriTitle"/>
+
+            <View
+                android:id="@+id/ori_guide_line"
+                android:layout_width="match_parent"
+                android:layout_height="2dp"
+                android:background="@color/black"
+                app:layout_constraintStart_toStartOf="@id/ori_title_container"
+                app:layout_constraintTop_toBottomOf="@id/ori_date"
+                android:layout_margin="10dp"/>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/ori_content_container"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/oriName"
-            app:layout_constraintBottom_toTopOf="@id/ori_date"
-            app:layout_constraintStart_toStartOf="@id/oriName"
-            android:text="제목"
-            android:textSize="20sp"
-            android:textColor="@color/black"
-            android:textStyle="bold"
-            android:autoSizeTextType="uniform"
-            android:autoSizePresetSizes="@array/text_size"
-            android:maxLines="1"
-            android:ellipsize = "marquee"
-            android:marqueeRepeatLimit = "marquee_forever"
-            android:singleLine="true"
-            android:focusable="true"
-            android:focusableInTouchMode="true"
-            android:scrollHorizontally="true"
-            />
+            app:layout_constraintTop_toBottomOf="@id/ori_title_container"
+            app:layout_constraintStart_toStartOf="@id/ori_title_container"
+            android:layout_margin="15dp">
+
+            <ScrollView
+                android:id="@+id/scroll_ori"
+                android:layout_width="match_parent"
+                android:layout_height="480dp"
+                android:background="@color/white"
+                android:fillViewport="true"
+                android:scrollbars="none"
+                app:layout_constraintStart_toStartOf="@id/ori_content_container"
+                app:layout_constraintTop_toTopOf="@id/ori_content_container">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:background="@color/white"
+                        android:id="@+id/oriScript"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:text="로딩중..."
+                        android:textSize="20sp"
+                        android:textStyle="bold"
+                        android:gravity="center" />
+
+                </LinearLayout>
+            </ScrollView>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/ori_player"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/ori_content_container"
+            app:layout_constraintStart_toStartOf="@id/ori_content_container"
+            app:layout_constraintBottom_toBottomOf="@id/ori_container"
+            app:layout_constraintEnd_toEndOf="@id/ori_content_container">
+
+            <include
+                layout="@layout/audio_parts"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-
-
-
-    <!-- 본문 영역 -->
-    <FrameLayout
-        android:id="@+id/container"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@+id/content_container"
-        android:background="@drawable/rectangle9"
-        android:elevation="4dp"
-        android:gravity="center"
-        >
-
-        <ScrollView
-            android:id="@+id/scroll_ori"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:padding="10dp">
-
-            <!-- LinearLayout으로 변경 -->
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-                <TextView
-                    android:background="@drawable/frame4"
-                    android:id="@+id/oriScript"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="로딩중..."
-                    android:textSize="20sp"
-                    android:textStyle="bold"
-                    android:gravity="center" />
-
-                <ImageView
-                    android:layout_gravity="center"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/seekbar">
-                </ImageView>
-
-                <!-- 추가할 버튼 -->
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:layout_gravity="center">
-
-                    <ImageButton
-                        android:id="@+id/skipback"
-                        android:background="#00FF0000"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:src="@drawable/skipback">
-                    </ImageButton>
-                    <ImageButton
-                        android:id="@+id/play"
-                        android:background="#00FF0000"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:src="@drawable/play">
-                    </ImageButton>
-                    <ImageButton
-                        android:id="@+id/stop"
-                        android:background="#00FF0000"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:src="@drawable/stop"
-                        android:visibility="gone">
-                    </ImageButton>
-                    <ImageButton
-                        android:id="@+id/skipforward"
-                        android:background="#00FF0000"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:src="@drawable/skipfoward">
-                    </ImageButton>
-                    <ImageButton
-                        android:id="@+id/pdf"
-                        android:background="#00FF0000"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:src="@drawable/pdfbutton">
-                    </ImageButton>
-                </LinearLayout>
-
-            </LinearLayout>
-
-        </ScrollView>
-
-    </FrameLayout>
-
-</RelativeLayout>
+</LinearLayout>
