--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -3,25 +3,32 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/main"
+        android:id="@+id/recent"
         android:enabled="true"
-        android:icon="@drawable/ic_home"
-        android:title="main"
+        android:icon="@drawable/recent"
+        android:title="최신"
         app:showAsAction="always"/>
-    <!--
+
         <item
-            android:id="@+id/search"
+            android:id="@+id/home"
             android:enabled="true"
-            android:icon="@drawable/plan"
-            android:title="search"
+            android:icon="@drawable/home"
+            android:title="홈"
             app:showAsAction="always"/>
+
+        <item
+            android:id="@+id/thema"
+            android:enabled="true"
+            android:icon="@drawable/star_not"
+            android:title="테마"
+            app:showAsAction="always"/>
+
 
         <item
             android:id="@+id/setting"
             android:enabled="true"
             android:icon="@drawable/ic_settings"
-            android:title="setting"
+            android:title="설정"
             app:showAsAction="always"/>
-    -->
 
 </menu>
