--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/main_layout"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainFragment">
 
     <!-- Header Section -->
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
@@ -15,33 +17,48 @@
         android:padding="10dp">
 
         <TextView
+            android:id="@+id/main_logo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
             android:text="TalkStock"
             android:textStyle="bold"
-            android:textSize="18sp"
-            android:textColor="#000"/>
+            android:textColor="@color/black"
+            android:textSize="15dp"
+            android:shadowColor="@color/gray_dark"
+            android:shadowDx="5"
+            android:shadowDy="5"
+            android:shadowRadius="2"/>
 
-        <TextView
+        <androidx.constraintlayout.widget.Guideline
+            app:layout_constraintEnd_toStartOf="@id/search_button"
+            android:id="@+id/search_guideline"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="LOGO"
-            android:layout_marginStart="10dp"
-            android:textStyle="bold"
-            android:textSize="18sp"
-            android:textColor="#000"/>
-
-        <View
+            android:orientation="vertical"
+            app:layout_constraintGuide_end="0dp"/>
+        <EditText
+            android:id="@+id/search_input"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="1"/>
+            app:layout_constraintEnd_toStartOf="@id/search_guideline"
+            app:layout_constraintTop_toTopOf="@id/search_button"
+            app:layout_constraintBottom_toBottomOf="@id/search_button"
+            app:layout_constraintStart_toEndOf="@id/main_logo"
+            android:layout_marginLeft="20dp"
+            android:layout_weight="1"
+            android:visibility="gone"
+            android:background="@color/white" />
 
-        <ImageView
+        <ImageButton
+            android:id="@+id/search_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@android:drawable/ic_menu_search"
-            android:contentDescription="Search" />
-    </LinearLayout>
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:background="@android:drawable/ic_menu_search" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <!-- Tabs Section -->
     <HorizontalScrollView
