ttshelper는 tts변환 후 파일 저장 기능만 유지
foreground로 audioService 추가해서 mediaplayer 관리 전담.
-> 백그라운드에서 상시 관리하여 progressbar 동기화 가능

동기화는 성공했으나 MediaPlayer 로딩으로 Progress 업데이트가 늦어져 동기화가 실시간으로 반영되지 못함.
+ 뭘 건든지 모르겠는데 왜 자동 재생 사라졌지..

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -220,7 +221,7 @@
             android:layout_margin="5dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/home_guide_line">
+            app:layout_constraintTop_toBottomOf="@id/home_guide_line" >
 
             <Button
                 android:id="@+id/myWish"
@@ -286,15 +287,17 @@
             android:id="@+id/home_swiper"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="@id/home_playlist"
             app:layout_constraintTop_toBottomOf="@id/home_button_part"
-            app:layout_constraintBottom_toBottomOf="@id/home_playlist">
+            app:layout_constraintVertical_bias="0.0"
+            tools:layout_editor_absoluteX="10dp">
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/home_recycler"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_margin="5dp"
-                android:orientation="vertical"/>
+                android:orientation="vertical" />
 
         </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
