--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -118,14 +118,13 @@
                         android:textColor="@color/black"
                         android:textSize="13dp" />
 
-                    <ProgressBar
+                    <SeekBar
                         android:id="@+id/progress_bar"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         app:layout_constraintStart_toEndOf="@id/current_time"
                         app:layout_constraintEnd_toStartOf="@id/full_time"
                         app:layout_constraintTop_toTopOf="parent"
-                        style="?android:attr/progressBarStyleHorizontal"
                         android:max="100"
                         android:progress="0"
                         android:layout_marginLeft="8dp"
