--- a/app/src/main/res/layout/itembox.xml
+++ b/app/src/main/res/layout/itembox.xml
@@ -52,11 +52,12 @@
         app:layout_constraintEnd_toEndOf="@id/box_layout"
         app:layout_constraintBottom_toBottomOf="@id/box_title"/>
 
-    <!--아이콘 배경 색상 변경 필요 (setBackgroundColor)-->
     <ImageButton
+        android:id="@+id/box_star_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/star"
+        android:backgroundTint="@color/white"
         app:layout_constraintEnd_toEndOf="@id/box_layout"
         app:layout_constraintTop_toTopOf="@id/box_layout"/>
 
