home과 recommend의 오디오 트랙이 원활하게 전환 되지 않아 분리하기로 결정
-> 심플한 original의 복사본 / SimplePlayerActivity를 만들기로 함.

우선 할일
1. homeFragment 디자인 변경
2. Original 디자인 변경
3. simplePlayer 생성
4. searchPage 생성
( 여기서도 마찬가지로 오디오 족같이 굴면 하나 더 만들어야함..)

--- a/app/src/main/res/drawable/round_box.xml
+++ b/app/src/main/res/drawable/round_box.xml
@@ -3,8 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     tools:ignore="ExtraText">
 
-    <solid android:color="@color/green" /> <!--배경색-->
-    <size android:height="32dp"
-          android:width="117dp"/>
+    <solid android:color="@color/white" /> <!--배경색-->
+    <size android:height="200dp"
+        android:width="380dp"/>
     <corners android:radius="12dp"/>
 </shape>
