--- a/app/src/main/res/layout/recommend_item.xml
+++ b/app/src/main/res/layout/recommend_item.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/rit_layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/background_color">
 
     <TextView
         android:id="@+id/rit_name"
@@ -11,8 +12,8 @@
         android:layout_height="wrap_content"
         android:text="종목명"
         android:textStyle="normal"
-        android:textColor="@color/black"
-        android:textSize="22sp"
+        android:textColor="@color/green"
+        android:textSize="14sp"
         app:layout_constraintTop_toTopOf="@id/rit_layout"
         app:layout_constraintStart_toStartOf="@id/rit_layout"
         android:layout_margin="30dp"/>
@@ -22,21 +23,23 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="리포트 제목"
-        android:textSize="30sp"
+        android:textSize="18sp"
         android:textColor="@color/black"
         android:textStyle="bold"
         app:layout_constraintTop_toBottomOf="@id/rit_name"
         app:layout_constraintStart_toStartOf="@id/rit_name"
+        app:layout_constraintEnd_toEndOf="@id/rit_script"
         android:layout_marginLeft="30dp"
-        android:layout_marginRight="10dp"/>
+        android:layout_marginRight="30dp"/>
 
     <TextView
         android:id="@+id/rit_date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="HH:MM"
-        android:textSize="13sp"
-        app:layout_constraintEnd_toEndOf="@id/rit_layout"
+        android:text="date"
+        android:textSize="14sp"
+        android:textColor="@color/brown"
+        app:layout_constraintEnd_toEndOf="@id/rit_script"
         app:layout_constraintBottom_toBottomOf="@id/rit_name"
         android:layout_marginRight="15dp"/>
 
@@ -45,9 +48,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="로딩중 . . ."
-        android:textSize="18dp"
+        android:textSize="14dp"
         android:textStyle="normal"
         android:textColor="@color/black"
+        android:background="@drawable/round_box"
+        app:layout_constraintTop_toBottomOf="@id/rit_title"
         app:layout_constraintBottom_toBottomOf="@id/rit_layout"
         app:layout_constraintStart_toStartOf="@id/rit_layout"
         app:layout_constraintEnd_toEndOf="@id/rit_layout"
