--- a/app/src/main/res/layout/item_layout.xml
+++ b/app/src/main/res/layout/item_layout.xml
@@ -3,11 +3,10 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:padding="8dp"
-    android:layout_margin="8dp"
-    android:background="@color/gray"
-    android:layout_marginBottom="12dp"
-    android:elevation="10dp">
+    android:paddingTop="8dp"
+    android:paddingBottom="8dp"
+    android:background="@color/white"
+    android:layout_marginBottom="12dp">
 
     <TextView
         android:id="@+id/item_title"
@@ -15,50 +14,33 @@
         android:layout_height="wrap_content"
         android:text="리포트 제목"
         android:textColor="@color/black"
-        android:textSize="25sp"
+        android:textSize="16sp"
         android:textStyle="bold"
-        app:layout_constraintTop_toTopOf="@id/item_layout"
-        app:layout_constraintStart_toStartOf="@id/item_layout"
+        android:paddingBottom="5dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         android:layout_marginLeft="10dp"/>
 
     <TextView
         android:id="@+id/item_category"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="분류"
-        android:textSize="15sp"
-        app:layout_constraintTop_toBottomOf="@id/item_title"
-        app:layout_constraintStart_toStartOf="@id/item_title"
-        android:layout_marginLeft="5dp"/>
-
-    <View
-        android:id="@+id/item_guide_line"
-        android:layout_width="1dp"
-        android:layout_height="15sp"
-        android:background="@color/black"
-        app:layout_constraintStart_toEndOf="@id/item_category"
-        app:layout_constraintTop_toTopOf="@id/item_category"
-        app:layout_constraintBottom_toBottomOf="@id/item_category"
-        android:layout_margin="3sp"/>
-
-    <TextView
-        android:id="@+id/stockName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:text="종목명"
-        android:textSize="15sp"
-        app:layout_constraintStart_toEndOf="@id/item_guide_line"
-        app:layout_constraintTop_toTopOf="@id/item_category"
-        android:layout_marginLeft="3sp"/>
+        android:textStyle="normal"
+        android:textColor="@color/green"
+        android:textSize="14sp"
+        app:layout_constraintTop_toBottomOf="@id/item_title"
+        app:layout_constraintStart_toStartOf="@id/item_title" />
 
     <TextView
         android:id="@+id/item_date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="upload time"
-        android:textSize="13sp"
-        android:textColor="#00027B"
-        app:layout_constraintBottom_toBottomOf="@id/item_layout"
-        app:layout_constraintEnd_toEndOf="@id/item_layout"/>
+        android:textSize="14sp"
+        android:textColor="@color/brown"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/item_category"
+        android:layout_marginEnd="30dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
